--- a/css/style.css
+++ b/css/style.css
@@ -1142,7 +1142,7 @@ a:focus {
 
 /* footer section*/
 .footer_section {
-  background-color: #2b1899;
+  background-color: #363636;
   padding: 20px;
 }
 
