--- a/css/style.css
+++ b/css/style.css
@@ -1226,7 +1226,10 @@ a:focus {
 
     /*** Profile Card ****/
 
-    
+    .iframe-container {
+      border-radius: 22px;
+      width: 100%;
+    }
 .profile-card {
   position: relative;
   max-width: 375;
